feat: add manipulation of AIS raw data + add conversion AIS -> GPX